Undo changes to gradle.yml to test